debut du transfert des regex vers php

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
+debug.proxy.host=127.0.0.1
+debug.proxy.port=9000
+debug.url=DEFAULT_URL
 index.file=index.php
+run.as=LOCAL
 url=http://localhost/Projet/
